<resources>
    <string name="app_name">LocalFinds</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="local_finds">Local Finds</string>
    <string name="lang_english">English</string>
    <string name="lang_hindi">हिंदी</string>
    <string name="lang_gujrati">ગુજરાતી</string>
    <string name="lang_marathi">मराठी</string>
    <string name="lang_punjabi">ਪੰਜਾਬੀ</string>
    <string name="lang_tamil">தமிழ்</string>
    <string name="lang_bangla">বাংলো</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="required_mobile">Required Mobile</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_to_join_finder_community">Welcome to join Finder Community</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="verify_code">Verify Code</string>
    <string name="please_enter_the_code_we_just_sent_to_your">Please enter the code we just sent to your</string>
    <string name="didn_t_receive_otp">Didn’t receive OTP</string>
    <string name="re_enter_password">Re enter Password</string>
    <string name="password">Password</string>
    <string name="forgot_password_Q">Forgot Password ?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="not_have_an_account">Don\'t have an account? <b><u><font color="#6a1b9a">Sign Up</font></u></b></string>
    <string name="create_account">Create Account</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="already_have_an_account">Already have an account? <b><u><font color="#6a1b9a">Login</font></u></b></string>
    <string name="login_here">Login here</string>
    <string name="submit">Submit</string>
    <string name="verification_is_successfully">Verification is Successfully</string>
    <string name="resend_otp_timer">Resend OTP : %s sec</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="enter_otp_to_verify">Enter OTP to Verify</string>
    <string name="verification">Verification</string>
    <string name="name">Name</string>
    <string name="remember_me">Remember Me</string>
    <string name="verify">Verify</string>
    <string name="new_password">New Password</string>
    <string name="back_to_login"> <u> Back To Login </u> </string>
    <string name="confirm">Confirm</string>
    <string name="conform">Confirm</string>
    <string name="finder_description">Discover local servicemen for various services with Finder, your go-to application. Get the best service providers at your fingertips!</string>
    <string name="next">Next</string>
    <string name="select_language">Select language</string>
    <string name="password_change_successfully">Password Change Successfully!</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="get_code">GET CODE</string>
    <string name="phone_number">Phone number</string>
    <string name="or_sign_up_using">or Sign Up using</string>
    <string name="contact_us">Contact Us</string>
    <string name="facing_problems_having_questions">Facing Problems Having Questions</string>
    <string name="email">Email</string>
    <string name="terms_conditions_blue"><b><u><font color="#725ba5">terms and conditions.</font></u></b></string>
    <string name="welcome">Welcome</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="phone_number_email">phone number/Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="please_enter_mobile_number">Please enter a mobile number</string>
    <string name="please_enter_valid_mobile_number">Please enter a valid mobile number</string>
    <string name="please_enter_password">Please enter a password</string>
    <string name="please_enter_valid_password">Please enter a valid password</string>
    <string name="please_enter_email">Please enter an email</string>
    <string name="please_enter_valid_email">Please enter a valid email</string>
    <string name="please_accept_terms_and_conditions">Please accept the terms and conditions</string>
    <string name="please_enter_mobile_number_or_email">Please enter mobile number or email</string>
    <string name="please_enter_a_valid_password">please enter a valid password</string>
    <string name="password_does_not_match">Password Does not match</string>
    <string name="please_enter_a_valid_input">please enter a valid input</string>
    <string name="alert">Alert</string>
    <string name="error_check_your_internet_connection">Check your network connection</string>
    <string name="ok">OK</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="reason_issue_description">We\'re sorry to hear that you\'re experiencing difficulties. To help us better assist you, please select the reason for your report.</string>
    <string name="error">Error !!</string>
    <string name="invalid">Invalid !!</string>
    <string name="success">Success !!</string>
    <string name="otp_must_be_6_digits">Otp must be 6 digits</string>
    <string name="menu">menu</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="take_a_phone">take a phone</string>
    <string name="select_from_gallery">select from gallery</string>
    <string name="select_from_files">select from files</string>
    <string name="cancel">Cancel</string>
    <string name="file_can_t_use_more_then_10mb">File can\'t use more then 10MB</string>
    <string name="enter_password_to_verify">Enter password to verify</string>
    <string name="check_internet_connection">check internet connection</string>
    <string name="internet_description">internet description</string>
    <string name="reload">reload</string>
    <string name="technical_issues">Technical Issues</string>
    <string name="service_quality">Service Quality</string>
    <string name="user_experience">User Experience</string>
    <string name="report_an_issue">Report an Issue</string>
    <string name="other">other</string>
    <string name="enter_a_reason">enter a reason</string>
    <string name="report">report</string>
    <string name="log_out">Log out</string>
    <string name="are_you_sure">are you sure</string>
    <string name="you_want_to_logout">you want to logout</string>
    <string name="yes">yes</string>
    <string name="logout">logout</string>
    <string name="delete">delete</string>
    <string name="restart">RESTART</string>
    <string name="title">Title</string>
    <string name="unavailable">Unavailable</string>
    <string name="available">Available</string>
</resources>