<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/selector_white_to_grey_e2"
    android:id="@+id/profile_option">


        <ImageView
            android:id="@+id/imgRightArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_8"
            android:layout_marginEnd="@dimen/dimen_25"
            app:layout_constraintStart_toEndOf="@id/switchStatus"
            android:src="@drawable/ic_right_arrow_grey"
            app:layout_constraintBottom_toBottomOf="@id/txtTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/txtTitle" />

        <TextView
            android:id="@+id/txtTitle"
            style="@style/materialText_regular_14"
            android:layout_width="@dimen/dimen_0"
            android:textSize="@dimen/_15sp"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/dimen_15"
            android:layout_marginStart="@dimen/dimen_30"
            android:gravity="start"
            android:textColor="@color/grey_66"
            android:paddingVertical="@dimen/dimen_8"
            android:drawableStart="@drawable/ic_lock_new"
            android:layout_marginVertical="@dimen/dimen_5"
            android:includeFontPadding="false"
            android:text="@string/title"
            app:layout_constraintBottom_toTopOf="@id/viewDivider"
            app:layout_constraintEnd_toStartOf="@id/txtSelectedOption"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />


        <TextView
            android:id="@+id/txtSelectedOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/materialText_medium_12"
            android:text="@string/select_language"
            android:textAllCaps="false"
            android:layout_marginStart="@dimen/dimen_8"
            android:textColor="@color/light_purple"
            android:visibility="gone"
            android:gravity="center|center_vertical"
            app:layout_constraintEnd_toStartOf="@id/switchStatus"
            app:layout_constraintBottom_toBottomOf="@id/txtTitle"
            app:layout_constraintStart_toEndOf="@id/txtTitle"
            app:layout_constraintTop_toTopOf="@id/txtTitle"/>




    <androidx.appcompat.widget.SwitchCompat
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_30"
        app:trackTint="@color/switch_track_green_grey_selector"
        app:thumbTint="@color/switch_thumb_green_grey_selector"
        android:text="@string/available"
        android:textOff="@string/unavailable"
        android:textOn="@string/available"
        android:clickable="false"
        android:checked="true"
        android:id="@+id/switchStatus"
        android:textSize="@dimen/_12sp"
        app:layout_goneMarginEnd="@dimen/dimen_25"
        android:paddingHorizontal="@dimen/dimen_5"
        android:visibility="gone"
        android:textColor="@color/green_accept"
        android:fontFamily="@font/poppins_regular"
        android:gravity="left|center_vertical"
        app:layout_constraintEnd_toStartOf="@id/imgRightArrow"
        app:layout_constraintBottom_toBottomOf="@id/txtTitle"
        app:layout_constraintStart_toEndOf="@id/txtSelectedOption"
        app:layout_constraintTop_toTopOf="@id/txtTitle"/>



    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1"
        android:id="@+id/viewDivider"
        android:background="@color/grey_E2E2E2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTitle"/>

    </androidx.constraintlayout.widget.ConstraintLayout>